# programming-exercises

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md
catch2_test/: CMakeLists.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  Constants.cmake  Doxygen.cmake  LinkTimeOptimization.cmake  PrecompileHeaders.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  TimeTrace.cmake  UnityBuild.cmake
dependencies/: CMakeLists.txt
fuzz_test/: CMakeLists.txt
gtest_test/: CMakeLists.txt  gtest_main.cpp
project_euler/: CMakeLists.txt  common.cpp  common.hpp  problem_1_multiples_of_3_and_5.hpp  problem_2_even_fibonacci_numbers.hpp  problem_3_largest_prime_factor.cpp  problem_3_largest_prime_factor.hpp  problem_4_largest_palindrome_product.cpp  problem_4_largest_palindrome_product.hpp  problem_5_smallest_multiple.cpp  problem_5_smallest_multiple.hpp
project_euler/answers/: CMakeLists.txt  answers.cpp
project_euler/lib/: CMakeLists.txt  common.cpp  problem_10_summation_of_primes.cpp  problem_11_largest_product_in_a_grid.cpp  problem_12_highly_divisible_triangular_number.cpp  problem_1_multiples_of_3_and_5.cpp  problem_2_even_fibonacci_numbers.cpp  problem_3_largest_prime_factor.cpp  problem_4_largest_palindrome_product.cpp  problem_5_smallest_multiple.cpp  problem_6_sum_square_difference.cpp  problem_7_ten_thousand_and_first_prime.cpp  problem_8_largest_product_in_a_series.cpp  problem_9_special_pythagorean_triplet.cpp
project_euler/lib/include/project_euler/: common.hpp  problem_10_summation_of_primes.hpp  problem_11_largest_product_in_a_grid.hpp  problem_12_highly_divisible_triangular_number.hpp  problem_1_multiples_of_3_and_5.hpp  problem_2_even_fibonacci_numbers.hpp  problem_3_largest_prime_factor.hpp  problem_4_largest_palindrome_product.hpp  problem_5_smallest_multiple.hpp  problem_6_sum_square_difference.hpp  problem_7_ten_thousand_and_first_prime.hpp  problem_8_largest_product_in_a_series.hpp  problem_9_special_pythagorean_triplet.hpp
project_euler/scripts/: create_next_problem_files.sh
project_euler/test/: CMakeLists.txt  common.cpp  even_fibonacci_numbers.cpp  highly_divisible_triangular_number.cpp  largest_palindrome_product.cpp  largest_product_in_a_grid.cpp  largest_product_in_a_series.cpp  multiples_of_3_and_5_test.cpp  smallest_multiple.cpp  special_pythagorean_triplet.cpp  sum_square_difference.cpp  summation_of_primes.cpp
project_euler_results/: CMakeLists.txt  answers.cpp
project_euler_test/: CMakeLists.txt  common.cpp  even_fibonacci_numbers.cpp  largest_palindrome_product.cpp  largest_prime_factor.cpp  multiples_of_3_and_5_test.cpp  smallest_multiple.cpp
src/: CMakeLists.txt
src/fltk/: CMakeLists.txt
src/gtkmm/: CMakeLists.txt
src/imgui/: CMakeLists.txt
src/qt/: CMakeLists.txt
